# webgis

./: index.html  package-lock.json  pyproject.toml
.github/workflows/: vite.yml
assets/: index-WF8Jr94B.css  index-nj-QAd28.js
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
worldmap/: db.sqlite3
worldmap/api/v1/: urls.py
worldmap/api/v1/coordinates/: routes.py  serializers.py  views.py
worldmap/config/: settings.py  urls.py
worldmap/coordinates/: admin.py  models.py
worldmap/coordinates/migrations/: 0001_initial.py
